# controllers/transactions/transactionStatistics.js
@@ -1,14 +1,11 @@
 const { Transaction } = require("../../models/transaction")
 // const RequestError = require("../../helpers/RequestError")
 const moment = require('moment')
-// const { getCategoryName } = require("../transactions/listCategories")
+const { getCategoryName } = require("../transactions/listCategories")
 
 const transactionStatistics = async (req, res) => {
     const { _id: owner } = req.user;
     const { startMonth = 1, endMonth, startYear, endYear } = req.body;
-
-    // console.log(startMonth, startYear);
-    // console.log(endMonth, endYear);
 
     if ((!endYear) || (!endMonth)) {
         endYearChanged = startYear;
@@ -23,37 +20,63 @@ const transactionStatistics = async (req, res) => {
     let tempDateEnd = new Date(endYearChanged, (endMonthChanged - 1), 1);
     const endPoint = new Date(moment(tempDateEnd).endOf('month'));
 
-    // console.log(startPoint.toString());
-    // console.log(endPoint.toString());
-    // console.log(await getCategoryName("expense", 3));
-   
-
-    const result =  await Transaction.aggregate([
+    const resultTemp = await Transaction.aggregate([
         {
-        $match: {
-            owner: owner,
-            transactionType: 'expense',
-            date : 
-                { $gte: startPoint,
-                $lt: endPoint, 
+            $match: {
+                owner: owner,
+                transactionType: 'expense',
+                date:
+                {
+                    $gte: startPoint,
+                    $lt: endPoint,
                 },
-        },
-        },
-
-        {
-        $group: {
-            _id: "$category",
-            totalSum: { $sum: "$amount" },
-        },
+            },
         },
 
         {
-        $project: { _id: 0, category: "$_id", totalSum: "$totalSum" },
+            $group: {
+                _id: "$category",
+                totalSum: { $sum: "$amount" },
+            },
+        },
+
+        {
+            $project: { _id: 0, category: "$_id", totalSum: "$totalSum" },
         },
     ]);
     
-    
-    res.json(result);
+    const incomeStatistics = await Transaction.aggregate([
+        {
+            $match: {
+                owner: owner,
+                transactionType: 'income',
+                date:
+                {
+                    $gte: startPoint,
+                    $lt: endPoint,
+                },
+            },
+        },
+
+        {
+            $group: {
+                _id: null,
+                totalSum: { $sum: "$amount" },
+            },
+        },
+
+        {
+            $project: { _id: 0, totalSum: "$totalSum" },
+        },
+    ]);
+
+    const expenseStatistics = await Promise.all(resultTemp.map(async (item) => {
+        const categoryName = await getCategoryName("expense", item.category);
+        return ({...item, categoryName });
+            
+    }));
+     
+    res.json({expenseStatistics, incomeStatistics});
 }
 
 module.exports = transactionStatistics;
